[tool.poetry]
name = "Homework_22_1"
version = "0.1.0"
description = ""
authors = ["AleksandrZaec <zaecam95@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
crispy-bootstrap5 = "^2023.10"
pytils = "^0.4.1"
pillow = "^10.1.0"
self = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"